Store player-specific resource packs in player data instead of separate file.